# dear-my-prof

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  PresentationOutline.txt  README.md
bind/: CMakeLists.txt  CppProperties.json  binding.gyp  package.json
bind/Include/bind/: Bind.hpp  Conversions.hpp  ConvertArgs.hpp  ElectronApp.hpp
bind/Source/: Bind.cpp  Conversions.cpp  ConvertArgs.cpp  ElectronApp.cpp
core/: CMakeLists.txt  README.md
core/Private/core/: Address.hpp  CodaStringTransform.hpp  CredentialManager.hpp  DetailPresenter.hpp  DetailTemplatePresenter.hpp  DetailTemplateView.hpp  DetailView.hpp  Email.hpp  EmailList.hpp  EmailListPresenter.hpp  EnvironmentPresenter.hpp  FillTemplateView.hpp  Internal.hpp  LoginPresenter.hpp  LoginView.hpp  LowerStringTransform.hpp  NewEmailView.hpp  NewTemplateView.hpp  ObjectStringTransform.hpp  Observer.hpp  OpenDetailPresenter.hpp  OpenDetailTemplatePresenter.hpp  OpenFillTemplatePresenter.hpp  OpenNewEmailPresenter.hpp  OpenNewTemplatePresenter.hpp  OpenSelectProfessorPresenter.hpp  OpenSelectTemplatePresenter.hpp  OpenTemplateListPresenter.hpp  PascalStringTransform.hpp  ProfessorList.hpp  ProfessorPresenter.hpp  RootView.hpp  SaveTemplatePresenter.hpp  SelectProfessorView.hpp  SelectTemplateView.hpp  SendEmailPresenter.hpp  StringTransform.hpp  StringTransformFactory.hpp  Subject.hpp  SubjectStringTransform.hpp  (+8 more)
core/Public/core/: App.hpp  Args.hpp  Core.hpp  HasApp.hpp  Presenter.hpp  View.hpp
core/Source/: App.cpp  CodaStringTransform.cpp  Core.cpp  CredentialManager.cpp  DetailPresenter.cpp  DetailTemplatePresenter.cpp  EmailList.cpp  EmailListPresenter.cpp  EnvironmentPresenter.cpp  LoginPresenter.cpp  OpenDetailPresenter.cpp  OpenDetailTemplatePresenter.cpp  OpenFillTemplatePresenter.cpp  OpenNewEmailPresenter.cpp  OpenNewTemplatePresenter.cpp  OpenSelectProfessorPresenter.cpp  OpenSelectTemplatePresenter.cpp  OpenTemplateListPresenter.cpp  ProfessorList.cpp  ProfessorPresenter.cpp  SaveTemplatePresenter.cpp  SendEmailPresenter.cpp  StringTransformFactory.cpp  Subject.cpp  Template.cpp  TemplateList.cpp  TemplateListPresenter.cpp  TemplatePresenter.cpp  TemplateString.cpp  View.cpp
core/Test/: ObserverTest.cpp  StringTransformTest.cpp  TemplateStringTest.cpp  TemplateTest.cpp
gui/: CMakeLists.txt  README.md  index.html  index.js  launch.json  main.js  package.json  prepare_asset.py
gui/Asset/: Icon.icns  ProfessorList.txt  Templates.txt
gui/Resource/: Icon.psd
gui/Script/: main.js
gui/Style/: index.css  style.css
gui/View/: common.js  detail.html  detail.js  detailtemplate.html  detailtemplate.js  filltemplate.html  filltemplate.js  inbox.html  inbox.js  index.html  index.js  login.html  login.js  newemail.html  newemail.js  root.html  root.js  selectprofessor.html  selectprofessor.js  selecttemplate.html  selecttemplate.js  template.html  template.js
